inress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guacamole-ingress
  namespace: guacamole
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "GUAC_SESSION"
spec:
  rules:
  - host: guacamole.local
    http:
      paths:
      - path: /guacamole
        pathType: Prefix
        backend:
          service:
            name: guacamole
            port:
              number: 8080
  tls:
  - hosts:
    - guacamole.local
    secretName: guacamole-tls
